[gd_scene load_steps=13 format=3 uid="uid://du7obetkcf8tn"]

[ext_resource type="Script" path="res://Scripts/game_map/poi_scripts/dice_altar.gd" id="1_m5oxh"]
[ext_resource type="Theme" uid="uid://liuy3as2gehs" path="res://Fonts/Themes/bigger_dice_game_ui.tres" id="2_na041"]
[ext_resource type="Theme" uid="uid://g7xlk0plmj00" path="res://Fonts/Themes/dice_game_ui.tres" id="3_pupph"]
[ext_resource type="Theme" uid="uid://dgx63tv2yl26o" path="res://Fonts/Themes/text_button.tres" id="4_68cq2"]
[ext_resource type="FontFile" uid="uid://cw706bl4vj4uf" path="res://Fonts/Dungeon Depths.otf" id="4_wsd7w"]
[ext_resource type="Texture2D" uid="uid://ba5fohkagawd8" path="res://Sprites/dice_game_ui/close X.png" id="5_xpg7j"]
[ext_resource type="Texture2D" uid="uid://b7bakf1xgyypw" path="res://Sprites/Dice_battle_assets/die circle.png" id="6_32624"]
[ext_resource type="Script" path="res://Scripts/dice_game/dice_holder.gd" id="7_kijry"]
[ext_resource type="Script" path="res://Scripts/shop/shop_container.gd" id="8_q2h03"]
[ext_resource type="PackedScene" uid="uid://c21j8rpl4tpqr" path="res://Prefabs/game_ui/ui_item_desciption.tscn" id="9_4q5bj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ygc8y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t186t"]
size = Vector2(376, 396)

[node name="dice_altar" type="Node2D" node_paths=PackedStringArray("ui_item_description")]
script = ExtResource("1_m5oxh")
ui_item_description = NodePath("ui_item_desciption")

[node name="game Visuals TEMP2" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -5.0
offset_right = 1158.0
offset_bottom = 650.0
color = Color(1, 0.658824, 0.658824, 1)

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 201.0
offset_top = 10.0
offset_right = 947.0
offset_bottom = 80.0
theme = ExtResource("2_na041")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]dice altar"

[node name="circle description" type="RichTextLabel" parent="."]
offset_left = -58.0
offset_top = 413.0
offset_right = 520.0
offset_bottom = 448.0
theme = ExtResource("3_pupph")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
bbcode_enabled = true
text = "[center]place dice here as offering"

[node name="return gold ui" type="RichTextLabel" parent="."]
offset_left = 39.0
offset_top = 510.0
offset_right = 426.0
offset_bottom = 545.0
theme = ExtResource("4_68cq2")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
bbcode_enabled = true
text = "[center]$0"

[node name="sacrafice label" type="RichTextLabel" parent="."]
offset_left = 590.0
offset_top = 569.0
offset_right = 906.0
offset_bottom = 604.0
theme = ExtResource("4_68cq2")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
bbcode_enabled = true
text = "[center]total sacafices:"

[node name="sacrafice_ui" type="RichTextLabel" parent="."]
offset_left = 887.0
offset_top = 569.0
offset_right = 989.0
offset_bottom = 604.0
theme = ExtResource("4_68cq2")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
bbcode_enabled = true
text = "[center]0"

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 147.0
offset_top = 429.0
offset_right = 290.0
offset_bottom = 474.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_wsd7w")
theme_override_font_sizes/font_size = 20
text = "submit"
flat = true

[node name="player_ui" type="Node2D" parent="."]

[node name="close" type="TextureButton" parent="player_ui"]
offset_left = 1093.0
offset_top = 7.0
offset_right = 1315.0
offset_bottom = 234.0
scale = Vector2(0.23, 0.23)
focus_mode = 0
texture_normal = ExtResource("5_xpg7j")

[node name="discard circles" type="Node2D" parent="."]

[node name="slot_1" type="Sprite2D" parent="discard circles"]
position = Vector2(135.5, 327.5)
texture = ExtResource("6_32624")

[node name="dholder_hand" type="Area2D" parent="discard circles/slot_1" groups=["dice_snap"]]
script = ExtResource("7_kijry")

[node name="CollisionShape2D" type="CollisionShape2D" parent="discard circles/slot_1/dholder_hand"]
shape = SubResource("RectangleShape2D_ygc8y")

[node name="slot_2" type="Sprite2D" parent="discard circles"]
position = Vector2(306.5, 327.5)
texture = ExtResource("6_32624")

[node name="dholder_hand" type="Area2D" parent="discard circles/slot_2" groups=["dice_snap"]]
script = ExtResource("7_kijry")

[node name="CollisionShape2D" type="CollisionShape2D" parent="discard circles/slot_2/dholder_hand"]
shape = SubResource("RectangleShape2D_ygc8y")

[node name="slot_3" type="Sprite2D" parent="discard circles"]
position = Vector2(221.5, 185.5)
texture = ExtResource("6_32624")

[node name="dholder_hand" type="Area2D" parent="discard circles/slot_3" groups=["dice_snap"]]
script = ExtResource("7_kijry")

[node name="CollisionShape2D" type="CollisionShape2D" parent="discard circles/slot_3/dholder_hand"]
shape = SubResource("RectangleShape2D_ygc8y")

[node name="player_inventory" type="Node2D" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="player_inventory"]
offset_left = 748.0
offset_top = 134.0
offset_right = 1139.0
offset_bottom = 544.0

[node name="GridContainer" type="GridContainer" parent="player_inventory/PanelContainer"]
layout_mode = 2
columns = 3
script = ExtResource("8_q2h03")
trade_side = "discard"

[node name="inventory" type="Area2D" parent="player_inventory" groups=["dice_snap"]]
position = Vector2(953, 331)
script = ExtResource("7_kijry")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_inventory/inventory"]
position = Vector2(-8, 8)
shape = SubResource("RectangleShape2D_t186t")

[node name="dice_layer" type="Node2D" parent="."]

[node name="ui_item_desciption" parent="." instance=ExtResource("9_4q5bj")]
visible = false
offset_left = 368.0
offset_top = 86.0
offset_right = 880.0
offset_bottom = 542.0
scale = Vector2(0.7, 0.7)

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="player_ui/close" to="." method="_on_close_button_down"]
